--- a/kaguya/templates/anime.html
+++ b/kaguya/templates/anime.html
@@ -132,22 +132,92 @@
                     <div class="btn-group dropdown">
                         <div class="input-group">
                             <div class="input-group-btn">
-                                <button type="button" class="btn btn-outline-warning btn-sm text-dark dropdown-toggle-rating" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fa fa-star" aria-hidden="true"></i> Rating <i class="fa fa-caret-down" aria-hidden="true"></i>
-                                </button>
-                                <div class="dropdown-menu " id="rating" aria-labelledby="dropdownMenuButton2">
 
-                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 10</a>
-                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 9</a>
-                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 8</a>
-                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 7</a>
-                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 6</a>
-                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 5</a>
-                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 4</a>
-                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 3</a>
-                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 2</a>
-                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 1</a>
-                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 0</a>
+                                <button type="button" class="btn btn-outline-warning btn-sm text-dark dropdown-toggle-rating active" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    {% if user_anime.rating == 0 %}
+                                        <i class="fa fa-star" aria-hidden="true"></i> Rating: {{ user_anime.rating }} <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    {% elif user_anime.rating == 1 %}
+                                        <i class="fa fa-star" aria-hidden="true"></i> Rating: {{ user_anime.rating }} <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    {% elif user_anime.rating == 2 %}
+                                        <i class="fa fa-star" aria-hidden="true"></i> Rating: {{ user_anime.rating }} <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    {% elif user_anime.rating == 3 %}
+                                        <i class="fa fa-star" aria-hidden="true"></i> Rating: {{ user_anime.rating }} <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    {% elif user_anime.rating == 4 %}
+                                        <i class="fa fa-star" aria-hidden="true"></i> Rating: {{ user_anime.rating }} <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    {% elif user_anime.rating == 5 %}
+                                        <i class="fa fa-star" aria-hidden="true"></i> Rating: {{ user_anime.rating }} <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    {% elif user_anime.rating == 6 %}
+                                        <i class="fa fa-star" aria-hidden="true"></i> Rating: {{ user_anime.rating }} <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    {% elif user_anime.rating == 7 %}
+                                        <i class="fa fa-star" aria-hidden="true"></i> Rating: {{ user_anime.rating }} <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    {% elif user_anime.rating == 8 %}
+                                        <i class="fa fa-star" aria-hidden="true"></i> Rating: {{ user_anime.rating }} <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    {% elif user_anime.rating == 9 %}
+                                        <i class="fa fa-star" aria-hidden="true"></i> Rating: {{ user_anime.rating }} <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    {% elif user_anime.rating == 10 %}
+                                        <i class="fa fa-star" aria-hidden="true"></i> Rating: {{ user_anime.rating }} <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    {% else %}
+                                        <i class="fa fa-star" aria-hidden="true"></i> Select Rating <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                    {% endif %}
+                                </button>
+
+                                <div class="dropdown-menu " id="rating" aria-labelledby="dropdownMenuButton2">
+                                    <form action="{{ url_for('anime_bp.rate0', anime_id=anime.id) }}" method="post">
+                                        {{ emptyForm.hidden_tag() }}
+                                        {{ emptyForm.submit(type='submit', class='dropdown-item rate-btn', value=0) }}
+                                    </form>
+                                    <form action="{{ url_for('anime_bp.rate1', anime_id=anime.id) }}" method="post">
+                                        {{ emptyForm.hidden_tag() }}
+                                        {{ emptyForm.submit(type='submit', class='dropdown-item rate-btn', value=1) }}
+                                    </form>
+                                    <form action="{{ url_for('anime_bp.rate2', anime_id=anime.id) }}" method="post">
+                                        {{ emptyForm.hidden_tag() }}
+                                        {{ emptyForm.submit(type='submit', class='dropdown-item rate-btn', value=2) }}
+                                    </form>
+                                    <form action="{{ url_for('anime_bp.rate3', anime_id=anime.id) }}" method="post">
+                                        {{ emptyForm.hidden_tag() }}
+                                        {{ emptyForm.submit(type='submit', class='dropdown-item rate-btn', value=3) }}
+                                    </form>
+                                    <form action="{{ url_for('anime_bp.rate4', anime_id=anime.id) }}" method="post">
+                                        {{ emptyForm.hidden_tag() }}
+                                        {{ emptyForm.submit(type='submit', class='dropdown-item rate-btn', value=4) }}
+                                    </form>
+                                    <form action="{{ url_for('anime_bp.rate5', anime_id=anime.id) }}" method="post">
+                                        {{ emptyForm.hidden_tag() }}
+                                        {{ emptyForm.submit(type='submit', class='dropdown-item rate-btn', value=5) }}
+                                    </form>
+                                    <form action="{{ url_for('anime_bp.rate6', anime_id=anime.id) }}" method="post">
+                                        {{ emptyForm.hidden_tag() }}
+                                        {{ emptyForm.submit(type='submit', class='dropdown-item rate-btn', value=6) }}
+                                    </form>
+                                    <form action="{{ url_for('anime_bp.rate7', anime_id=anime.id) }}" method="post">
+                                        {{ emptyForm.hidden_tag() }}
+                                        {{ emptyForm.submit(type='submit', class='dropdown-item rate-btn', value=7) }}
+                                    </form>
+                                    <form action="{{ url_for('anime_bp.rate8', anime_id=anime.id) }}" method="post">
+                                        {{ emptyForm.hidden_tag() }}
+                                        {{ emptyForm.submit(type='submit', class='dropdown-item rate-btn', value=8) }}
+                                    </form>
+                                    <form action="{{ url_for('anime_bp.rate9', anime_id=anime.id) }}" method="post">
+                                        {{ emptyForm.hidden_tag() }}
+                                        {{ emptyForm.submit(type='submit', class='dropdown-item rate-btn', value=9) }}
+                                    </form>
+                                    <form action="{{ url_for('anime_bp.rate10', anime_id=anime.id) }}" method="post">
+                                        {{ emptyForm.hidden_tag() }}
+                                        {{ emptyForm.submit(type='submit', class='dropdown-item rate-btn', value=10) }}
+                                    </form>
+
+<!--                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 10</a>-->
+<!--                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 9</a>-->
+<!--                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 8</a>-->
+<!--                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 7</a>-->
+<!--                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 6</a>-->
+<!--                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 5</a>-->
+<!--                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 4</a>-->
+<!--                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 3</a>-->
+<!--                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 2</a>-->
+<!--                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 1</a>-->
+<!--                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 0</a>-->
                                 </div>
                             </div>
                         </div>
@@ -233,8 +303,10 @@
 
             <!-- User Reviews -->
             {% for review in reviews %}
-                {% include '_animeReview.html' %}
-            <hr>
+                {% if review.content %}
+                    {% include '_animeReview.html' %}
+                    <hr>
+                {% endif %}
             {% endfor %}
         </div>
     </div>
