added link from anime_list to anime page
need to make whole row clickable or add a button.

--- a/kaguya/templates/anime_list.html
+++ b/kaguya/templates/anime_list.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+
 <div class="content m-5">
     <div class="row">
         <div class="col-xs-0 col-1"></div>
@@ -32,7 +33,7 @@
                     <tbody>
                         {% for anime in animelist %}
                             <tr>
-                                <th scope="row">{{loop.counter}}</th>
+                                <th scope="row"><a href="{{ url_for('anime_bp.anime_gen', anime_id=anime[0].id) }}">{{loop.index}}</a></th>
                                 <td>{{ anime[0].title }}</td>
                                 <td>{{ anime[1].rating }}</td>
                                 <td>{{ anime[1].episodes_watched }}/{{ anime[0].episodes }}</td>
@@ -48,4 +49,22 @@
     </div> 
 </div>
 
-{% endblock content %}
+
+<script>
+$(function(){
+    $('.table tr[data-href]').each(function(){
+        $(this).css('cursor','pointer').hover(
+            function(){ 
+                $(this).addClass('active'); 
+            },  
+            function(){ 
+                $(this).removeClass('active'); 
+            }).click( function(){ 
+                document.location = $(this).attr('data-href'); 
+            }
+        );
+    });
+});
+</script>
+
+{% endblock %}
