basic page layout added

--- a/kaguya/templates/_animeReview.html
+++ b/kaguya/templates/_animeReview.html
@@ -9,7 +9,7 @@
         <table style="width:100%; font-size:13px" class="mb-1">
             <tr>
                 <td><h6>{{ review.user.username }}</h6></td>
-                <td class="align-right font-weight-heavy">
+                <td class="text-right align-right font-weight-heavy">
                     {{ review.datetime_created.date() }} <br>
                     Rating: <b>{{ review.rating }}</b>
                 </td>
