--- a/kaguya/templates/anime_list.html
+++ b/kaguya/templates/anime_list.html
@@ -2,69 +2,58 @@
 {% block content %}
 
 
-<div class="content m-5">
+<div class="container">
     <div class="row">
-        <div class="col-xs-0 col-1"></div>
-        <div class="col-xs-12 col-10">
-            <h1 class="font-weight-light text-center m2" >Welcome {{ current_user.username }}!</h1>
-        </div>
-        <div class="col-xs-0 col-1"></div>
+            <h1 class="font-weight-light text-center" >Welcome {{ current_user.username }}!</h1>
     </div>
 
-    <div class="row">
-        <div class="col-xs-0 col-1"></div>
-        <div class="col-xs-3 col-md-2">
-            <p>Placeholder for sidebar</p>
+    <div class="row mb-4">
+        <div class="col-md-3">
+            <form>
+                <div class="form-group mt-4">
+                    <label for="listSelect">Choose a List</label>
+                    <select class="custom-select mr-sm-2" id="listSelect">
+                        <option selected="All">All</option>
+                        <option value="Watching">Watching</option>
+                        <option value="Untacked">Untacked</option>
+                        <option value="On Hold">On Hold</option>
+                        <option value="Plan to Watch">Plan to Watch</option>
+                        <option value="Completed">Completed</option>
+                        <option value="Droppedd">Dropped</option>
+                    </select>
+                </div>
+            </form>
         </div>
-        <div class="col-xs-9 col-md-8">
-        <h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">Anime List
-        </h1>
-        <hr class="mt-2 mb-10">
-            <div class="table-responsive shadow">
-                <table class="table table-hover">
-                    <thead class="thead-dark">
-                        <th scope="col">#</th>
-                        <th scope="col">Title</th>
-                        <th scope="col">Rating</th>
-                        <th scope="col">Progress</th>
-                        <th scope="col">Type</th>
-                        <th scope="col">Status</th>
-                    </thead>
-                    <tbody>
-                        {% for anime in animelist %}
-                            <tr data-href="{{ url_for('anime_bp.anime_gen', anime_id=anime[0].id) }}">
-                                <th scope="row">{{ loop.index }}</th>
-                                <td>{{ anime[0].title }}</td>
-                                <td>{{ anime[1].rating }}</td>
-                                <td>{{ anime[1].episodes_watched }}/{{ anime[0].episodes }}</td>
-                                <td>{{ anime[0].type }}</td>
-                                <td>{{ anime[1].status }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+        <div class="col-md-9">
+            {% for status, animes in animelist.items()  %}
+                <div class ="row">
+                    <h1 class="font-weight-light text-center text-lg-left mt-4 mb-2">{{ status }}</h1>
+                    <div class="table-responsive shadow">
+                        <table class="table table-hover">
+                            <thead class="thead-dark">
+                                <th scope="col">#</th>
+                                <th scope="col">Title</th>
+                                <th scope="col">Rating</th>
+                                <th scope="col">Progress</th>
+                                <th scope="col">Type</th>
+                            </thead>
+                            <tbody>
+                                {% for anime in animes %}
+                                    <tr data-href="{{ url_for('anime_bp.anime_gen', anime_id=anime[0].id) }}">
+                                        <th scope="row">{{ loop.index }}</th>
+                                        <td>{{ anime[0].title }}</td>
+                                        <td>{{ anime[1].rating }}</td>
+                                        <td>{{ anime[1].episodes_watched }}/{{ anime[0].episodes }}</td>
+                                        <td>{{ anime[0].type }}</td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
-        <div class="col-xs-0 col-md-1"></div> 
     </div> 
 </div>
-
-
-<script>
-$(function(){
-    $('.table tr[data-href]').each(function(){
-        $(this).css('cursor','pointer').hover(
-            function(){ 
-                $(this).addClass('active'); 
-            },  
-            function(){ 
-                $(this).removeClass('active'); 
-            }).click( function(){ 
-                document.location = $(this).attr('data-href'); 
-            }
-        );
-    });
-});
-</script>
 
 {% endblock %}
