added anime info

--- a/kaguya/templates/home.html
+++ b/kaguya/templates/home.html
@@ -71,7 +71,7 @@
             {% include '_homeReview.html' %}
           {% endfor %}
         </ul>
-        <a href="#" class="btn btn-dark btn-block btn-sm">More Reviews</a>
+        <a href="{{ url_for('main.reviews') }}" class="btn btn-dark btn-block btn-sm">More Reviews</a>
     </div>
     </div>
   </div>
