--- a/kaguya/templates/reviews.html
+++ b/kaguya/templates/reviews.html
@@ -31,7 +31,7 @@
   </row>
 
   {% for review in reviews %}
-    {% include '_animeReview.html' %}
+    {% include '_review.html' %}
     <hr>
   {% endfor %}
 
