--- a/kaguya/templates/base.html
+++ b/kaguya/templates/base.html
@@ -56,7 +56,7 @@
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('users.anime_list', user_id=current_user.id, user_url=current_user.username.replace(' ', '_')) }}">
+              <a class="nav-link" href="{{ url_for('users.anime_list', user_id=current_user.id, user_url=current_user.username.replace(' ', '_'), select_list='All')}}">
                   <i class="fa fa-list" aria-hidden="true"></i> Anime List
               </a>
             </li>
