frontend grid layout, searchbar

--- a/kaguya/templates/home.html
+++ b/kaguya/templates/home.html
@@ -12,7 +12,7 @@
   <p class="lead" style="text-align:center">
     <b> Discover Anime.<br>Track your favorites. <br>Join the community.<br></b>
     <br>
-    <button type="button" class="btn btn-primary btn-lg">Start Exploring</button>
+    <a href="{{ url_for('main.explore') }}" class="btn btn-primary btn-lg"> Start Exploring </a>
   </p>
 </div>
 
