--- a/kaguya/templates/base.html
+++ b/kaguya/templates/base.html
@@ -43,6 +43,11 @@
                   <i class="fa fa-info-circle" aria-hidden="true"></i> About
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('main.explore') }}">
+                  <i class="fa fa-book" aria-hidden="true"></i> Browse
+              </a>
+            </li>
             {% if current_user.is_anonymous %}
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('users.login') }}">
