added searchable dropdown buttons for filter options

--- a/kaguya/templates/explore.html
+++ b/kaguya/templates/explore.html
@@ -10,7 +10,7 @@
   <!--Search Bar-->
   <div class="row">
     <div class="col-md-8 col-centered">
-      <div class="input-group mb-5 mt-4">
+      <div class="input-group mb-5 mt-5">
         <input id="searchbar" type="text" placeholder="Search Anime" class="form-control border-primary">
         <div class="input-group-append">
           <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
@@ -21,6 +21,53 @@
 
   <!--Filter Options-->
   <div class="row">
+    <div class="col-md-12 mb-5 d-flex justify-content-around">
+      <div class="btn-group dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+          Genres <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <input class="form-control" id="myInput" type="text" placeholder="Search...">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item"  href="#">Drama</a>
+          <a class="dropdown-item"  href="#">Shounen</a>
+          <a class="dropdown-item"  href="#">Supernatural</a>
+          <a class="dropdown-item"  href="#">Comedy</a>
+          <a class="dropdown-item"  href="#">Magic</a>
+        </ul>
+      </div>
+
+      <div class="btn-group dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+          Genres <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <input class="form-control" id="myInput" type="text" placeholder="Search...">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item"  href="#">Drama</a>
+          <a class="dropdown-item"  href="#">Shounen</a>
+          <a class="dropdown-item"  href="#">Supernatural</a>
+          <a class="dropdown-item"  href="#">Comedy</a>
+          <a class="dropdown-item"  href="#">Magic</a>
+        </ul>
+      </div>
+
+      <div class="btn-group dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+          Genres <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <input class="form-control" id="myInput" type="text" placeholder="Search...">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item"  href="#">Drama</a>
+          <a class="dropdown-item"  href="#">Shounen</a>
+          <a class="dropdown-item"  href="#">Supernatural</a>
+          <a class="dropdown-item"  href="#">Comedy</a>
+          <a class="dropdown-item"  href="#">Magic</a>
+        </ul>
+      </div>
+
+    </div>
   </div>
 
   <!--Anime Grid: X by 4 grid-->
