--- a/kaguya/static/explore.css
+++ b/kaguya/static/explore.css
@@ -19,3 +19,11 @@
 .figure-caption{
   margin-bottom: 5vh;
 }
+
+#myInput {
+    padding: 20px;
+    margin-top: -6px;
+    border: 0;
+    border-radius: 0;
+    background: #f1f1f1;
+}
