--- a/kaguya/templates/explore.html
+++ b/kaguya/templates/explore.html
@@ -22,6 +22,7 @@
   <!--Filter Options-->
   <div class="row">
     <div class="col-md-12 mb-5 d-flex justify-content-around">
+      <!--Genres-->
       <div class="btn-group dropdown">
         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
           Genres <span class="caret"></span>
@@ -37,46 +38,166 @@
         </ul>
       </div>
 
+      <!--Year-->
       <div class="btn-group dropdown">
         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-          Genres <span class="caret"></span>
+          Year <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
-          <input class="form-control" id="myInput" type="text" placeholder="Search...">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item"  href="#">Drama</a>
-          <a class="dropdown-item"  href="#">Shounen</a>
-          <a class="dropdown-item"  href="#">Supernatural</a>
-          <a class="dropdown-item"  href="#">Comedy</a>
-          <a class="dropdown-item"  href="#">Magic</a>
+          <input class="form-control" id="yearInput" type="text" placeholder="Search...">
+          <a class="dropdown-item" href="#">a</a>
+          <a class="dropdown-item"  href="#">b</a>
+          <a class="dropdown-item"  href="#">c</a>
+          <a class="dropdown-item"  href="#">d</a>
+          <a class="dropdown-item"  href="#">e</a>
+          <a class="dropdown-item"  href="#">f</a>
         </ul>
       </div>
 
+      <!--Season-->
       <div class="btn-group dropdown">
         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-          Genres <span class="caret"></span>
+          Season <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
-          <input class="form-control" id="myInput" type="text" placeholder="Search...">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item"  href="#">Drama</a>
-          <a class="dropdown-item"  href="#">Shounen</a>
-          <a class="dropdown-item"  href="#">Supernatural</a>
-          <a class="dropdown-item"  href="#">Comedy</a>
-          <a class="dropdown-item"  href="#">Magic</a>
+          <a class="dropdown-item" href="#">Winter</a>
+          <a class="dropdown-item"  href="#">Spring</a>
+          <a class="dropdown-item"  href="#">Summer</a>
+          <a class="dropdown-item"  href="#">Fall</a>
         </ul>
       </div>
 
+      <!--Airing status-->
+      <div class="btn-group dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+          Airing Status <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <a class="dropdown-item" href="#">Finished Airing</a>
+          <a class="dropdown-item"  href="#">Currently Airing</a>
+          <a class="dropdown-item"  href="#">Not yet aired</a>
+        </ul>
+      </div>
+
+      <!--Format type-->
+      <div class="btn-group dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+          Format Type <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <a class="dropdown-item" href="#">Movie</a>
+          <a class="dropdown-item"  href="#">Music</a>
+          <a class="dropdown-item"  href="#">TV</a>
+          <a class="dropdown-item"  href="#">Special</a>
+          <a class="dropdown-item"  href="#">ONA</a>
+          <a class="dropdown-item"  href="#">OVA</a>
+          <a class="dropdown-item"  href="#">Unknown</a>
+        </ul>
+      </div>
+
+      <!--Order By-->
+      <div class="btn-group dropdown float-right">
+        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Order By
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+          <form action="{{ url_for('main.reviews') }}" method="post" onsubmit="">
+            <div class="dropdown-item form-check pl-5">
+              {% if request.form.get('ratingRadios') == 'highest rating' %}
+              <input class="form-check-input" type="radio" name="ratingRadios" id="ratingRadios1" value="highest rating" checked>
+              {% else %}
+              <input class="form-check-input" type="radio" name="ratingRadios" id="ratingRadios1" value="highest rating">
+              {% endif %}
+              <label class="form-check-label" for="ratingRadios1">
+                Highest Rating
+              </label>
+            </div>
+            <div class="dropdown-item form-check pl-5">
+              {% if request.form.get('ratingRadios') == 'lowest rating' %}
+              <input class="form-check-input" type="radio" name="ratingRadios" id="ratingRadios2" value="lowest rating" checked>
+              {% else %}
+              <input class="form-check-input" type="radio" name="ratingRadios" id="ratingRadios2" value="lowest rating">
+              {% endif %}
+              <label class="form-check-label" for="ratingRadios2">
+                Lowest Rating
+              </label>
+            </div>
+            <div class="dropdown-item form-check pl-5">
+              {% if request.form.get('ratingRadios') == 'any rating' or request.form.get('ratingRadios') == None %}
+              <input class="form-check-input" type="radio" name="ratingRadios" id="ratingRadios3" value="any rating" checked>
+              {% else %}
+              <input class="form-check-input" type="radio" name="ratingRadios" id="ratingRadios3" value="any rating">
+              {% endif %}
+              <label class="form-check-label" for="ratingRadios3">
+                Any Rating
+              </label>
+            </div>
+            <div class="dropdown-divider"></div>
+            <div class="dropdown-item form-check pl-5">
+              {% if request.form.get('timeRadios') == 'recent' or request.form.get('timeRadios') == None %}
+              <input class="form-check-input" type="radio" name="timeRadios" id="timeRadios1" value="recent" checked>
+              {% else %}
+              <input class="form-check-input" type="radio" name="timeRadios" id="timeRadios1" value="recent">
+              {% endif %}
+              <label class="form-check-label" for="timeRadios1">
+                Recent
+              </label>
+            </div>
+            <div class="dropdown-item form-check pl-5">
+              {% if request.form.get('timeRadios') == 'oldest' %}
+              <input class="form-check-input" type="radio" name="timeRadios" id="timeRadios2" value="oldest" checked>
+              {% else %}
+              <input class="form-check-input" type="radio" name="timeRadios" id="timeRadios2" value="oldest">
+              {% endif %}
+              <label class="form-check-label" for="timeRadios2">
+                Oldest
+              </label>
+            </div>
+            <div class="dropdown-item">
+              <input type="submit" value="Apply">
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
+
+
+  <!--Selected tags / filters-->
+
 
   <!--Anime Grid: X by 4 grid-->
   <div class="row text-center">
     {% include '_animeRow4.html' %}
     {% include '_animeRow4.html' %}
+    {% include '_animeRow4.html' %}
   </div>
 
   <!--Page Navigation-->
+  <row>
+    <table style="width:100%" class="mb-3">
+      <tr>
+        <td>
+          {% if prev_url %}
+            <a href="{{ prev_url }}">
+              <button type="button" class="btn btn-dark">
+                <i class="fa fa-chevron-left" aria-hidden="true"></i> Back
+              </button>
+            </a>
+          {% endif %}
+        </td>
+        <td class="text-right align-right">
+          {% if next_url %}
+            <a href="{{ next_url }}">
+              <button type="button" class="btn btn-dark">
+                Next <i class="fa fa-chevron-right" aria-hidden="true"></i>
+              </button>
+            </a>
+          {% endif %}
+        </td>
+      </tr>
+    </table>
+  </row>
 
 
 </div>
