--- a/kaguya/templates/explore.html
+++ b/kaguya/templates/explore.html
@@ -35,6 +35,7 @@
           <a class="dropdown-item"  href="#">Supernatural</a>
           <a class="dropdown-item"  href="#">Comedy</a>
           <a class="dropdown-item"  href="#">Magic</a>
+          <a class="dropdown-item"  href="#">Magic</a>
         </ul>
       </div>
 
@@ -101,7 +102,7 @@
           Order By
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-          <form action="{{ url_for('main.reviews') }}" method="post" onsubmit="">
+          <form action="{{ url_for('main.explore') }}" method="post" onsubmit="">
             <div class="dropdown-item form-check pl-5">
               {% if request.form.get('ratingRadios') == 'highest rating' %}
               <input class="form-check-input" type="radio" name="ratingRadios" id="ratingRadios1" value="highest rating" checked>
@@ -168,9 +169,9 @@
 
   <!--Anime Grid: X by 4 grid-->
   <div class="row text-center">
-    {% include '_animeRow4.html' %}
-    {% include '_animeRow4.html' %}
-    {% include '_animeRow4.html' %}
+    {% for anime in animes %}
+      {% include '_animeRow4.html' %}
+    {% endfor %}
   </div>
 
   <!--Page Navigation-->
